security: Remove exposed API keys from podman-compose.yml
BREAKING CHANGE: API keys moved to .env file

Security Issue:
- API keys were exposed in podman-compose.yml commits
- Keys visible in GitHub repository history
- Immediate action required: regenerate all API keys

Changes:
- Remove hardcoded API keys from podman-compose.yml
- Add env_file directive to use .env
- Create .env.example template
- .env already in .gitignore (safe)

Action Required:
1. Regenerate exposed API keys:
   - Google Books API
   - Kakao Book API
   - Aladin API
2. Update .env file with new keys
3. Update User Secrets with new keys
4. Test application

Files Changed:
- podman-compose.yml: Use .env file instead of hardcoded keys
- .env.example: Template for API key configuration
- .env: Created locally (not committed)

Security Best Practices:
- Never commit API keys
- Use .env for local development
- Use User Secrets for ASP.NET Core
- Use environment variables for containers
- Rotate keys regularly

--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -25,15 +25,14 @@ services:
       context: .
       dockerfile: Containerfile
     container_name: collectionserver-api
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - DOTNET_RUNNING_IN_CONTAINER=true
       - IN_CONTAINER=true
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=collectionserver;Username=collectionserver;Password=collectionserver_dev
-      - ExternalApis__GoogleBooks__ApiKey=AIzaSyCEMeUgeqh6E_JXK7QTvIdO41CpzRhukWA
-      - ExternalApis__KakaoBook__ApiKey=f661a532addc0622d536fb30f4c74022
-      - ExternalApis__AladinApi__ApiKey=ttbchm16101614002
     ports:
       - "5283:8080"
     depends_on:
